--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "react-sliding-button",
 	"version": "1.0.0",
 	"description": "A slideable and dragable react button for Web and Mobile",
-	"main": "lib/index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc",
+		"build": "rollup -c",
+		"start": "rollup -c -w",
 		"lint": "eslint ./src --fix",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
@@ -29,19 +30,32 @@
 		"url": "https://github.com/shaibrown5/react-sliding-button/issues"
 	},
 	"homepage": "https://github.com/shaibrown5/react-sliding-button#readme",
+	"peerDependencies": {
+		"react": "^16.8.0",
+		"react-dom": "^16.8.0"
+	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.13",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
 		"@typescript-eslint/parser": "^5.14.0",
+		"babel-core": "^6.26.3",
+		"babel-runtime": "^6.26.0",
 		"eslint": "^8.10.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"rollup": "^2.70.0",
+		"rollup-plugin-sass": "^1.2.10",
+		"rollup-plugin-typescript2": "^0.31.2",
 		"ts-jest": "^27.1.3",
 		"typescript": "^4.6.2"
 	},
 	"files": [
-		"lib/**/*"
+		"dist"
 	]
 }
